# autosub

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  IMPLEMENTATION_PLAN.md  LICENSE  LOOP.md  README.md  TASKS.md  install.sh  loop.sh
.github/workflows/: ci.yml  release.yml
src/: config.rs  error.rs  interactive.rs  lib.rs  main.rs  pipeline.rs
src/audio/: chunk.rs  extract.rs  mod.rs  vad.rs
src/subtitle/: convert.rs  json.rs  mod.rs  postprocess.rs  srt.rs  vtt.rs
src/transcribe/: gemini.rs  mod.rs  orchestrator.rs  whisper.rs
src/translate/: gemini.rs  mod.rs
tests/: integration_tests.rs  mock_api_tests.rs
