[package]
name = "autosub"
version = "0.1.0"
edition = "2021"
description = "Automatic subtitle generation using Whisper and Gemini APIs"
license = "MIT"
repository = "https://github.com/example/autosub"

[dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }

# CLI
clap = { version = "4", features = ["derive"] }

# HTTP client
reqwest = { version = "0.12", features = ["json", "multipart", "stream"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Audio
hound = "3.5"

# Error handling
anyhow = "1"
thiserror = "2"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Progress
indicatif = "0.17"

# Config
toml = "0.8"
dirs = "5"

# Async trait
async-trait = "0.1"

# Base64 encoding for Gemini API
base64 = "0.22"

# Futures utilities for concurrent processing
futures = "0.3"

# Regex for parsing Gemini timestamps
regex = "1"

[dev-dependencies]
tokio-test = "0.4"
wiremock = "0.6"
